# art_hug_09

./: .env.example  .gitignore  README.md  Taskfile.yml  docker-compose.yml  init.sql  project.yaml  pyproject.toml
docs/: article9.md  article9_notebook.md  article9i.md
notebooks/: faiss_vector_db.ipynb  postgres_vector_db.ipynb  tutorial.ipynb
notebooks/.ipynb_checkpoints/: postgres_vector_db-checkpoint.ipynb
src/: __init__.py  config.py  embedding_generation.py  faiss_complete_notebook.py  faiss_fix.py  hybrid_search.py  main.py  multilingual_search.py  onnx_export.py  performance_benchmarking.py  postgres_vector_db.py  pruning.py  quantization.py  rag_implementation.py  rag_integration.py  semantic_search.py  vector_db_manager.py
tests/: test_examples.py  test_faiss_debug.py  test_faiss_minimal.py
